--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.16.5
+black==25.9.0
 blinker==1.9.0
 click==8.2.1
+flake8==7.3.0
 Flask==3.1.2
 greenlet==3.2.4
 inflect==7.5.0
@@ -8,13 +10,21 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.2
+mccabe==0.7.0
 measured==0.12.2
 more-itertools==10.8.0
+mypy_extensions==1.1.0
 numpy==2.3.3
+packaging==25.0
 pandas==2.3.2
+pathspec==0.12.1
+platformdirs==4.4.0
 psycopg2==2.9.10
+pycodestyle==2.14.0
+pyflakes==3.4.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytokens==0.1.10
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.43
